<resources>
    <string name="app_name">My Application</string>
    <string name="free_mode">Free Mode</string>
    <string name="history">History</string>
    <string name="pre_selected_workout">Pre-selected Workout</string>
    <string name="todo">TODO</string>
    <string name="Email"> Email</string>
    <string name="Password"> Password</string>
    <string name="Comfirm_Password"> Comfirm Password</string>
    <string name="Sign_in">SIGN IN</string>
    <string name="button">Button</string>
    <string name="no_account">Do not have account? Sign up</string>
    <string name="UserName">UserName</string>
    <string name="registration">Registration</string>
    <string name="Sign_up">Sign Up</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="jab_jab_straight">Jab Jab Straight</string>
    <string name="jab_jab_left_hook">Jab Jab Left-Hook</string>
    <string name="jab_jab_right_hook">Jab Jab Right Hook</string>
    <string name="jab_straight_uppercut">Jab Straight Uppercut</string>
    <string name="preselected_workouts">Preselected Workouts</string>
    <string name="start_workout">Start Workout</string>
    <string name="advanced">Advanced</string>
    <string name="intermediate">Intermediate</string>
    <string name="free_workout">Free Workout</string>
    <string name="beginner">Beginner</string>
    <string name="empty_space">\" \"</string>

</resources>