<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/free_workout"
    tools:context=".Freeworkout">

    <Button
        android:id="@+id/History"
        android:layout_width="289dp"
        android:layout_height="130dp"
        android:text="@string/advanced"
        app:backgroundTint="#FB0707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.201" />

    <Button
        android:id="@+id/button2"
        android:layout_width="289dp"
        android:layout_height="130dp"
        android:layout_marginTop="28dp"
        android:text="@string/intermediate"
        app:backgroundTint="#F80303"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pre_selected" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="210dp"
        android:layout_height="63dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/empty_space"
        android:inputType="textPersonName"
        android:text="@string/free_workout"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/Pre_selected"
        android:layout_width="289dp"
        android:layout_height="130dp"
        android:layout_marginTop="80dp"
        android:text="@string/beginner"
        app:backgroundTint="#FB0303"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

</androidx.constraintlayout.widget.ConstraintLayout>